# Capstone_2025

./: .gitignore  README.md
capstone_models/aasist/: model_analysis_aasist.ipynb  pyproject.toml
capstone_models/aasist/aasist_env/: README.md  aasist_analysis.ipynb  convert_mp3_to_wav.py  data_utils.py  eer_threshold.ipynb  export_eer_threshold.py  final_results.csv  main.py  main2.py  merge_results_with_metadata.py  scratch_dataset_edit.ipynb  train75_log.txt
capstone_models/aasist/aasist_env/config/: AASIST.conf  NB_AASIST.conf
capstone_models/aasist/aasist_env/exp_result/LA_AASIST_ep100_bs24/: events.out.tfevents.1741211609.Alecs-MacBook-Pro.local.82485.0  mozilla_evaluation_results.csv  (+3 more)
capstone_models/aasist/exp_result/LA_AASIST_ep100_bs24/: events.out.tfevents.1741210981.Alecs-MacBook-Pro.local.81917.0  events.out.tfevents.1741211321.Alecs-MacBook-Pro.local.82240.0  events.out.tfevents.1741211377.Alecs-MacBook-Pro.local.82302.0
data_cleaning/data-cleaning-env/: Standardize_Audio-2.ipynb  audio_standardizer.py  pyproject.toml
tssdnet/tssd_env/: README.md  best_threshold.txt  finetune_tssdnet.py  merge_results_with_metadata.py  model.py  pyproject.toml  run_scripts.ipynb  run_test_tssdnet.ipynb  swa_tssdnet.pth  sync_all_from_s3.py  test_tssdnet.py  test_tssdnet_baseline.py  test_tssdnet_baseline_copy.py  test_tssdnet_finetuned.py  train_tssdnet_finetuned.py
tssdnet/tssd_env/.ipynb_checkpoints/: run_test_tssdnet-checkpoint.ipynb
tssdnet/tssd_env/saved_checkpoints/: epoch_1_EER_0.2324_local_test.pth  epoch_1_EER_0.8711.pth  epoch_2_EER_0.1709_local_test.pth
(+255 files in other folders)
