[tool.poetry]
name = "aasist-env"
version = "0.1.0"
description = ""
authors = ["alecnaidoo <alecarnassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = ">=1.6.0"
torchcontrib = "^0.0.2"
numpy = "^2.2.3"
soundfile = "^0.13.1"
torchaudio = "^2.6.0"
pydub = "^0.25.1"
pandas = "^2.2.3"
tensorboard = "^2.19.0"
notebook = "^7.3.2"
jupyter = "^1.1.1"
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
scipy = "^1.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
