[tool.poetry]
name = "data-cleaning"
version = "0.1.0"
description = ""
authors = ["alecnaidoo <alecarnassi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
gdown = "^5.2.0"
librosa = "^0.11.0"
pydub = "^0.25.1"
soundfile = "^0.13.1"
notebook = "^7.3.3"
ipykernel = "^6.29.5"
matplotlib = "<3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
