[tool.poetry]
name = "rawnet-env"
version = "0.1.0"
description = ""
authors = ["alecnaidoo <alecarnassi@gmail.com>"]
readme = "README.md"
packages = [{include = "rawnet_env", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.6.0"
torchaudio = "^2.6.0"
pandas = "^2.2.3"
pyyaml = "^6.0.2"
tqdm = "^4.67.1"
soundfile = "^0.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
